@@ -20,6 +20,8 @@ Ver.12 (In Development)
   - (Ver.9) The setUpdatedRecord method in database classes renamed to setDataToUpdatedRecord. For the compatibility,
     calling the setUpdateRecord method more than one parameter redirect to setDataToUpdatedRecord method.
     The setUpdatedRecord with one parameter works as the setter of updatedRecord property.
+- [BUG FIX] The data-im="_@condition:..." way with numeric field and the "match" operator didn't expand the condition
+  clause with '%term%' value. As far as PostgreSQL goes, the casting to text is automatically applied it.
 
 Ver.11 (July 27, 2023)
 - Generic exporting class prepared as DB\Export.php.
